<resources>
    <string name="app_name">AuctionHouse</string>
    <string name="mainExerciseHint">Enter Exercise</string>
    <string name="mainWeightHint">Enter Weight</string>
    <string name="mainRepsHint">Enter Reps</string>
    <string name="mainSubmitButton">Submit</string>
    <string name="noLogsMessage">No records, time to go to the gym</string>
    <string name="logout">Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">SignUp</string>
    <string name="mainAdminButton">Admin Tools</string>
    <string name="mainItemButton">Items</string>
    <string name="mainAuctionButton">Auction</string>
    <string name="mainBidButton">Bid</string>
    <string name="return_login">Return Login</string>
    <string name="create_account">Create Account</string>
    <string name="return_home">return home</string>
    <string name="update_account">update account</string>
    <string name="userId">UserId</string>
    <string name="adminSubmitButton">Update IsAdmin</string>
    <string name="adminuserlist">adminUserList</string>
    <string name="no_items_in_database">No items in database.</string>
    <string name="itemHeading"> itemID |  Username  |  Item Name  |  Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>