<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/textview_username"
        android:text="ID    |    Username    |    Password    |    IsAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_margin="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adminUserDisplay"
        android:layout_width="374dp"
        android:layout_height="221dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fadeScrollbars="true"
        android:scrollbars="vertical"
        android:text="@string/adminuserlist"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/textview_username"/>

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/userId"
        android:textAlignment="center"
        android:inputType="number"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/adminUserDisplay" />

    <Button
        android:id="@+id/adminSubmitButton"
        android:layout_width="128dp"
        android:layout_height="96dp"
        android:text="@string/adminSubmitButton"
        android:textSize="20sp"
        android:visibility="visible"
        tools:visibility="visible"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_below="@+id/editTextUserId" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="128dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="144dp"
        android:gravity="center"
        android:text="@string/return_home"
        android:textSize="20sp"
        android:layout_below="@+id/adminSubmitButton"/>

</RelativeLayout>