<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Home page\nGo to Items to add items\nGo to Auction to Buy/Sell Items"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainAuctionButton"
        android:layout_width="144dp"
        android:layout_height="77dp"
        android:text="@string/mainAuctionButton"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf= "@+id/mainTextView"
        />
    <Button
        android:id="@+id/mainItemButton"
        android:layout_width="144dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:text="@string/mainItemButton"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf= "@+id/mainAuctionButton"/>
    <Button
        android:id="@+id/mainAdminButton"
        android:layout_width="144dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:text="@string/mainAdminButton"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainItemButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>